@@ -218,7 +218,7 @@
 <p>
    When you do a simple GET with the Restlet HTTP client connector, it appears that an extra "content-type" header is sent to the server, even though
    your call doesn't provide any input content (because you just GET a representation). This is due to a bug in the underlying JDK's HttpURLConnection
-   class in JDK 5.0. This was fixed in recent JDK 6.0 builds as indicated in the <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6369510">bug report</a>. We also asked for a backport of the fix to JDK 5.0 which is now available in JDK 5.0 update 10.
+   class in JDK 5.0. This bug is now fixed in JDK 5.0 (since update 10) and in JDK 6.0 (since beta 2) as indicated in the <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6369510">bug report</a>.
 </p>
 
 <h3><a name="19">19. Can a Filter modify the call like a Servlet Filter?</a></h3>
@@ -306,7 +306,7 @@ Servlet API, etc.).</li>
 <br/>
 
 <small>
-   Last modified on 2006-11-21. Copyright &copy; 2005-2006 <a href="mailto:contact@noelios.com">J&eacute;r&ocirc;me Louvel</a>. Restlet is a registered trademark of <a target="_top" href="http://www.noelios.com">Noelios Consulting</a>.
+   Last modified on 2006-12-06. Copyright &copy; 2005-2006 <a href="mailto:contact@noelios.com">J&eacute;r&ocirc;me Louvel</a>. Restlet is a registered trademark of <a target="_top" href="http://www.noelios.com">Noelios Consulting</a>.
 </small>
 
 </body>
